# vibecheck-nn

./: .gitignore  AWS_SETUP.txt  CLAUDE.md  README.md  ld_lp_dual.txt  progress.txt  pyproject.toml
configs/: acasxu_2023.yaml  adaptive_cruise_control_non_linear_2026.yaml  cctsdb_yolo_2023.yaml  cersyve.yaml  cgan2026.yaml  cgan_2023.yaml  challenging_certified_training_2026.yaml  cifar100_2024.yaml  collins_aerospace_benchmark.yaml  collins_rul_cnn_2022.yaml  cora_2024.yaml  default.yaml  dist_shift_2023.yaml  isomorphic_acasxu_2026.yaml  linearizenn_2024.yaml  lsnc_relu.yaml  malbeware.yaml  metaroom_2023.yaml  ml4acopf_2024.yaml  monotonic_acasxu_2026.yaml  nn4sys.yaml  relusplitter.yaml  relusplitter_2026.yaml  safenlp_2024.yaml  sat_relu.yaml  smart_turn_multimodal_2026.yaml  soundnessbench.yaml  soundnessbench_2026.yaml  test.yaml  tinyimagenet_2024.yaml  tllverifybench_2023.yaml  traffic_signs_recognition_2023.yaml  vggnet16_2022.yaml  vit_2023.yaml  yolo_2023.yaml
docs/: clean_slate_design.md  cleanup_inventory.md  soundness_sweep_2026-05-31.md
docs/benchmarks/: acasxu_2023.md  adaptive_cruise_control_2026.md  cctsdb_yolo_2023.md  cersyve.md  cgan_2023.md  challenging_certified_training_2026.md  cifar100_2024.md  collins_aerospace_benchmark.md  collins_rul_cnn_2022.md  cora_2024.md  dist_shift_2023.md  isomorphic_acasxu_2026.md  linearizenn_2024.md  lsnc_relu.md  malbeware.md  metaroom_2023.md  ml4acopf_2024.md  monotonic_acasxu_2026.md  nn4sys.md  overall.md  relusplitter_2026.md  safenlp_2024.md  sat_relu.md  smart_turn_multimodal_2026.md  soundnessbench.md  test.md  tinyimagenet_2024.md  tllverifybench_2023.md  traffic_signs_recognition_2023.md  vggnet16_2022.md  vit_2023.md  yolo_2023.md
examples/: prop_1.vnnlib  prop_2.vnnlib
safenlp_opt/: plan.md  problem.md
safenlp_opt/explorations/: explore02_exact_milp.py
scratch/: acasxu_11_prop2_sound.py  audit_benchmark.py  audit_dist_shift_2023_local.csv  dist_shift_diag.py  local_audit.py  sweep_sat_relu.sh  sweep_tll.sh  test_vecsplit.py
scratch/acasxu_p2_33/: explore11.py  explore12.py  explore13.py  explore14.py  explore15.py  explore16.py  explore17.py  explore_adaptive.py  explore_hybrid_timing.py  explore_optionb.py  plan.md
scratch/nnenum_style/: bbstop_ab.out  bench_solvers.py  explore01_dualascent_vs_gurobi.py  explore02_coord_ascent.py  gauge_hard.out  gauge_hard.py  hard_run.csv  hard_run.py  hard_set.txt  hard_v3.out  hard_v3.py  micro_contract.py  nnenum_timed.py  nnenum_timed_1_1_prop_1.out  nnenum_timed_1_1_prop_2.out  nnenum_timed_1_1_prop_3.out  nnenum_timed_1_1_prop_4.out  nnenum_timed_1_2_prop_1.out  nnenum_timed_1_2_prop_2.out  nnenum_timed_1_2_prop_3.out  nnenum_timed_1_2_prop_4.out  nnenum_timed_1_3_prop_1.out  nnenum_timed_1_3_prop_2.out  nnenum_timed_1_3_prop_3.out  nnenum_timed_1_3_prop_4.out  nnenum_timed_1_4_prop_1.out  nnenum_timed_1_4_prop_2.out  nnenum_timed_1_4_prop_3.out  nnenum_timed_1_4_prop_4.out  nnenum_timed_1_5_prop_1.out  nnenum_timed_1_5_prop_2.out  nnenum_timed_1_5_prop_3.out  nnenum_timed_1_5_prop_4.out  nnenum_timed_1_6_prop_1.out  nnenum_timed_1_6_prop_2.out  nnenum_timed_1_6_prop_3.out  nnenum_timed_1_6_prop_4.out  nnenum_timed_1_7_prop_1.out  nnenum_timed_1_7_prop_2.out  nnenum_timed_1_7_prop_3.out  (+167 more)
scratch/reverse_g/: NOTES.md  compare.py  gg_ground_truth.py  reverse_batched.py  test_batched.py  test_batched_oom.py  test_skip_gg.py  toy_conv.py  toy_dense.py  toy_dense_n.py  toy_skip.py
scripts/: aws_overnight_sweep.py  integration_runner.py
sound_audit/: DIST_SHIFT_ROOTCAUSE.md  FINDINGS.md  relaxation_soundness.txt  scan.txt  sigmoid_nets.txt
src/vibecheck/: __init__.py  acopf_dual_ascent.py  alpha_crown.py  alpha_tighten.py  attn_crown.py  batched_zono.py  bounded_module.py  box_halfspace.py  broadcast_util.py  cctsdb_yolo.py  cli_standard.py  config_detect.py  config_loader.py  config_profiles.py  dual_ascent_bab.py  forward_lirpa.py  gen_state_backward.py  gurobi_util.py  heartbeat.py  input_feasibility.py  io_util.py  lagrangian_n.py  main.py  monotone_invert.py  network.py  network_pair.py  nl_cos.py  nl_floor.py  nl_pow.py  nl_pwl.py  nl_sigmoid_tanh.py  nl_sin.py  nonlinear_augment.py  nonlinear_relax.py  nonlinear_split_dual.py  nonlinear_split_planes.py  onnx_loader.py  onnx_optimizer.py  onnx_torch_runner.py  patches_crown.py  (+22 more)
src/vibecheck2/: __init__.py  verify.py
tests/: _run_one_case.py  bench_alpha_crown_biasfield.py  bench_alpha_crown_fixed_biasfield.py  bench_biasfield28_compare.py  bench_biasfield28_endtoend.py  bench_biasfield28_quick.py  conftest.py  soundness_spotcheck.py  sweep_acasxu.py  sweep_acasxu_race.py  sweep_cersyve.py  sweep_relusplitter.py  test_adaptive_integration_pieces.py  test_alpha_crown_helpers.py  test_alpha_crown_sparse.py  test_attention_backward.py  test_attn_batch.py  test_augment_strict_disposition.py  test_backward_crown_nl.py  test_batched_zono.py  test_bilinear_mul_broadcast.py  test_bilinear_split.py  test_bilinear_square_backward.py  test_bnb.py  test_box_halfspace.py  test_broadcast_util.py  test_cctsdb_yolo.py  test_ce_clamp.py  test_cgan_op_bounds.py  test_clear_ce_upgrade.py  test_cli_standard.py  test_competition_cex_equiv.py  test_config_detect.py  test_config_profiles.py  test_conjunct_joint_spec.py  test_coverage.py  test_crown_scoring_conv_final.py  test_dist_shift_soundness.py  test_div_1d_bound.py  test_div_bilinear_sound.py  (+91 more)
tests/integration/: _runner.py  test_acasxu_2023.py  test_adaptive_cruise_control_2026.py  test_cctsdb_yolo_2023.py  test_cersyve.py  test_cgan_2023.py  test_challenging_certified_training_2026.py  test_cifar100_2024.py  test_collins_aerospace_benchmark.py  test_cora_2024.py  (+21 more)
tests2/: test_backward.py  test_core.py
tools/: dump_default_yaml.py
vnncomp_scripts/: README  README.md  gpulock  install_tool.sh  parse_log.py  post_install.sh  post_install_tool.sh  prepare_instance.sh  run_benchmarks.py  run_instance.sh
(+16 files in other folders)
