[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibecheck"
version = "0.1.0"
description = "Vibe-Coded Neural Network Verification Tool"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "onnx",
    "torch",
    "dotmap",
    # Gurobi is used by the default `graph` mode's LP/MILP tightening. The pip
    # wheel ships a size-limited license that is sufficient for the unit +
    # integration tests; a full license is only needed for large models.
    "gurobipy",
    # onnxsim constant-folds dynamic-shape subgraphs (Shape/Gather/Concat) and
    # spectral-norm weight divisions into static form before graph construction.
    # Required to load SAGAN-style self-attention generators (cgan
    # small_transformer); see onnx_loader.load_onnx's auto-simplify trigger.
    "onnxsim",
    # Runtime: the universal SAT-witness validation (verify_graph._validate_sat_witness,
    # main._verify chokepoint) replays witnesses on CPU onnxruntime — the VNNCOMP scoring
    # engine — and the surrogate-attack mode uses it for counterexample validation.
    "onnxruntime",
    # surrogate-attack mode (surrogate_pgd.py): converts the folded float surrogate of an
    # INT8-quantized model to torch for gradient-PGD. onnx2torch handles transformer ops
    # (Softmax/Erf/LayerNorm) that vibecheck's own forward graph does not.
    "onnx2torch",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pyyaml", "onnxruntime"]

[project.scripts]
vibecheck = "vibecheck.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "integration: per-benchmark verdict regression tests (slow; require GPU + vnncomp benchmarks)",
]
