[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibecheck"
version = "0.1.0"
description = "Vibe-Coded Neural Network Verification Tool"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    # onnx/onnxruntime are PINNED to the VNNCOMP 2026 witness-replay environment
    # (onnx 1.21.0 / onnxruntime 1.26.0 / Python 3.12). The official scorer replays
    # every `sat` witness on exactly these versions; vibecheck validates its own
    # counterexamples on the same engine (see onnxruntime below), so the pin keeps a
    # CE vibecheck accepts from being rejected by a newer ORT's slightly different
    # floats. Bump both together only when the official scorer's pins move.
    "onnx==1.21.0",
    "torch",
    "dotmap",
    # Gurobi is used by the default `graph` mode's LP/MILP tightening. The pip
    # wheel ships a size-limited license that is sufficient for the unit +
    # integration tests; a full license is only needed for large models.
    "gurobipy",
    # onnxsim constant-folds dynamic-shape subgraphs (Shape/Gather/Concat) and
    # spectral-norm weight divisions into static form before graph construction.
    # Required to load SAGAN-style self-attention generators (cgan
    # small_transformer); see onnx_loader.load_onnx's auto-simplify trigger.
    "onnxsim",
    # Runtime: the universal SAT-witness validation (verify_graph._validate_sat_witness,
    # main._verify chokepoint) replays witnesses on CPU onnxruntime — the VNNCOMP scoring
    # engine — and the surrogate-attack mode uses it for counterexample validation. PINNED
    # to 1.26.0 (the 2026 scorer's exact version): CE-replay numerics are ORT's, so an
    # unpinned install pulling a newer ORT could compute a different witness Y and disagree
    # with the official scorer. CPUExecutionProvider is forced at every call site.
    "onnxruntime==1.26.0",
    # surrogate-attack mode (surrogate_pgd.py): converts the folded float surrogate of an
    # INT8-quantized model to torch for gradient-PGD. onnx2torch handles transformer ops
    # (Softmax/Erf/LayerNorm) that vibecheck's own forward graph does not.
    "onnx2torch",
    # VNNLIB-2.0 parser used by the VENDORED competition counterexample checker
    # (vnncomp_cex_v2.py). PINNED to the exact version the VNN-COMP 2026 scorer
    # uses so our v2 CE validation is bit-identical to the official scoring.
    "vnnlib==1.0.2",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pyyaml", "onnxruntime==1.26.0"]

[project.scripts]
vibecheck = "vibecheck.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "integration: per-benchmark verdict regression tests (slow; require GPU + vnncomp benchmarks)",
]
